# MyPokemon

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  sources.mk
attaque_info/: Abime  Ecume  Flammeche  Fouet_liane  Poudre_dodo
doc/: stat_calc.info
editor/: .gitignore  CMakeLists.txt  Makefile  editor  editor.pro  sources.mk  spec.pro  ui.mk
editor/include/: editor.hpp
editor/include/ui/: EditWidget.hpp  MainWindow.hpp  PokeEditWidget.hpp  PokeEditWindow.hpp  SkillEditWidget.hpp  mainwindow.hpp  ui_mainwindow.h
editor/include/widgets/: TypeWidget.hpp
editor/lib/promptomatic/: Makefile  main.cpp  sources.mk
editor/lib/promptomatic/include/: arguments.hpp  command.hpp  promptomatic.hpp
editor/lib/promptomatic/src/: Arguments.cpp  Command.cpp  Prompt.cpp
editor/src/: EditWidget.cpp  MainWindow.cpp  PokeEditWidget.cpp  PokeEditWindow.cpp  SkillEditWidget.cpp  edit.cpp  editor.cpp  main.cpp  mainwindow.cpp
editor/src/widgets/: TypeWidget.cpp
editor/translations/: editor_fr.qm  editor_fr.ts
editor/ui/: mainwindow.ui
include/: no_warnings.hpp
include/editor/: Editor.hpp
include/game/: AI.hpp  AbstractTrainer.hpp  Combat.hpp  Item.hpp  Player.hpp  Pokemon.hpp  PokemonModel.hpp  PokemonModele.hpp  Skill.hpp  Stat.hpp  StatModel.hpp  StatModele.hpp  Trainer.hpp  Type.hpp  WildTrainer.hpp  id.hpp  xp.hpp
lib/sqlite/: Makefile
lib/sqlite3/: Makefile  MyPokemon.db
poke_doc/: dommage__formule.info  nature.info  stat_calc.info  test.sql  type.info  xp.info
poke_doc/attaque_info/: Charge  List_of_move.info  Mimi-queu  Pistolet_a_O  Repli  Rugissement  Vampigraine
poke_doc/pokemon_info/: bulbizarre.info  carapuce.info  chenipan.info  herbizarre.info  roucoul.info  salameche.info
pokemon_info/: .#bulbizarre.info  carapuce.info  herbizarre.info  salameche.info
ressources/pokemon/: 1.poke  10.poke  11.poke  12.poke  13.poke  14.poke  15.poke  2.poke  3.poke  4.poke  5.poke  6.poke  7.poke  8.poke  9.poke
src/: main.cpp
src/editor/: Editor.cpp
src/game/: Type.cpp  xp.cpp
src/game/Combat/: Combat.cpp
src/game/Item/: Item.cpp
src/game/Pokemon/: Pokemon.cpp  PokemonModel.cpp
src/game/PokemonModele/: PokemonModele.cpp
src/game/Skill/: Skill.cpp
src/game/Stat/: Stat.cpp  StatModel.cpp  StatModele.cpp
src/game/Trainer/: AbsractTrainer.cpp  Player.cpp  Trainer.cpp  WildTrainer.cpp
